@@ -1,5 +1,7 @@
 === HEAD
 
+* Don't include primary key indexes when parsing MSSQL indexes on JDBC (jeremyevans)
+
 * Make Dataset#insert_select return nil on PostgreSQL if disable_insert_returning is used (jeremyevans)
 
 * Speed up execution of prepared statements with bound variables on MySQL (ibc@aliax.net)
